# rustore

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  service.yaml
rustore-client/: Cargo.toml
rustore-client/src/: hybrid_client.rs  lib.rs  piped_client.rs  pooled_client.rs  reconnect.rs
rustore-protocol/: Cargo.toml
rustore-protocol/src/: lib.rs  owned.rs  test.rs
rustore-server/: Cargo.toml
rustore-server/src/: lib.rs  main.rs  server.rs
rustore-storage/: Cargo.toml
rustore-storage/src/: fjall_database.rs  fjall_table.rs  lib.rs  sled_database.rs  sled_table.rs
rustore-test/: Cargo.toml
rustore-test/src/: main.rs
