[package]
name = "rustore-client"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
flume = { version = "0.11.0" }
anyhow = "1.0.75"
futures-util = { version = "0.3.29", features = ["sink"] }
tokio = { version = "1.34.0", features = ["macros", "net", "io-util"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
nohash = { version = "0.2.0" }
rustore-protocol = { path = "../rustore-protocol" }
bb8 = { version = "0.8.1" }
async-trait = { version = "0.1.74" }
fastrand = "2.0.1"
quick_cache = "0.4.0"
radix_trie = "0.2.1"
[lib]
