[package]
name = "rustore-storage"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
crc32c = "0.6.5"
fs2 = "0.4.3"
parking_lot = "0.12.1"
sled = {version = "0.3.2", git = "https://github.com/daibo83/sled-monorepo"}
quick_cache = "0.4.0"
ahash = "0.8.11"
fjall = { version = "1.0.5", features = ["bloom"] }
