[package]
name = "rustore-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chksum-hash-md5 = "0.0.0"
rustore-client = { path = "../rustore-client" }
rustore-server = { path = "../rustore-server" }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "net", "sync", "io-util"] }
tokio-util = { version = "0.7.9", features = ["net", "codec"] }
